align and fix  background center video

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,17 @@
     height: auto;
 }
 
-/* #logo-video {
+#background-video {
+
+    max-width: 100%;
+    height: auto;
+}
+
+#background-video-div {
+    text-align: center;
+}
+
+/* #background-video {
     z-index: -1;
     padding-top: 100px;
     left: 50%;
@@ -60,15 +70,30 @@
 
 
 }
+*/
 
-#cottage {
+ .about-img {
 
+    border-radius: 8px;
     max-width: 100%;
     height: auto;
-    grid-column-start: 1;
-    grid-column-end: 2;
+  
    
-} */
+}
+
+
+/* Artists */
+
+.artist-img {
+
+    border-radius: 8px;
+    max-width: 100%;
+    height: auto;
+
+}
+
+
+
 
 
 
